[FIX] web: Remove scrollbar overlay mixin
The mixin "o-scrollbar-overlay" has been removed since it layed on
non-standard CSS properties to make the scrollbar overlap on the
content. A "overflow-y: auto" has been applied instead since there was
no use for this behaviour in community.

closes odoo/odoo#59853

X-original-commit: 1979be87f53f8166d9d9e2afc6aef6e9d59b9a34
Related: odoo/enterprise#14025

--- a/addons/web/static/src/scss/modal.scss
+++ b/addons/web/static/src/scss/modal.scss
@@ -124,7 +124,7 @@
 
 body.modal-open {
     .modal {
-        @include o-scrollbar-overlay;
+        overflow-y: auto;
     }
 }
 
